--- a/web/index.html
+++ b/web/index.html
@@ -1,5 +1,44 @@
 <html lang="en-us"><script src="https://pygame-web.github.io/archives/0.9/pythons.js" type=module id=site data-LINES=57 data-CONSOLE=25 data-python=python3.12 data-os=vtx,fs,snd,gui async defer>#<!--
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>MonkeyRun Game</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      background-color: #222;
+      color: #eee;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      height: 100vh;
+      margin: 0;
+    }
+    h1 {
+      color: #ff9900;
+    }
+    a {
+      color: #4caf50;
+      text-decoration: none;
+      font-weight: bold;
+      margin-top: 20px;
+    }
+    a:hover {
+      text-decoration: underline;
+    }
+  </style>
+</head>
+<body>
+  <h1>Welcome to MonkeyRun!</h1>
+  <p>Your game is coming soon.</p>
+  <p>Check back later or view your project on GitHub:</p>
+  <a href="https://github.
 
+
+    
 print("""
 Loading monkeyrun from monkeyrun.apk
     Pygbag Version : 0.9.2
